--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
                     <small style="display: block; color: #999; font-size: 12px; margin-top: 5px;">We'll contact you to discuss your investment</small>
                 </div>
                 
-                <button class="cta-btn" id="ctaButton">}Confirm My Interest</button>
+                <button class="cta-btn" id="ctaButton">Confirm My Interest</button>
             </div>
 
             <div class="disclaimer">
