--- a/index.html
+++ b/index.html
@@ -621,12 +621,12 @@
             </div>
 
             <div class="market-comparison">
-                <h3>📊 Market Comparison</h3>
+                <h3>Market Comparison</h3>
                 <p id="marketComparisonText">This property ranks in the top 35% for ROI in Dubai Marina. Similar 2BR apartments yield 5.2% - 6.8% in this area.</p>
             </div>
 
             <div class="considerations">
-                <h3>⚠️ Key Considerations</h3>
+                <h3>Key Considerations</h3>
                 <ul id="considerationsList">
                     <li>Vacancy risk: 5-7% in this area based on historical data</li>
                     <li>Service charges may vary depending on building amenities</li>
